Add "Restore" feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="backup_successful">Backup Successful</string>
     <!--Restore-->
     <string name="restore">Restore</string>
+    <string name="nothing_to_restore">Nothing To Restore</string>
+    <string name="restore_dialog_title">Restore?</string>
+    <string name="restore_dialog_detail">Are you sure you want to restore \"%1$s\" ?</string>
     <string name="restore_failed">Restore failed!</string>
     <string name="restore_successful">Restored successfully</string>
 </resources>
